# ArcSat

./: .deployment  .dockerignore  .editorconfig  .env  .env.azure-ai.example  .env.example  .env.industrial  .env.production  .env.test  .eslintrc.json  .gitignore  ACAO_IMEDIATA.md  AZURE-DEPLOYMENT-GUIDE.md  AZURE_DEPLOYMENT.md  AZURE_TOKEN.txt  CHANGELOG.md  CONTRIBUTING.md  CRM.code-workspace  DEPLOY.md  DEPLOYMENT-README.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_INDEX.md  DEPLOY_RENDER.md  DEPLOY_WORKFLOW.md  DOMAIN-SETUP-SUCCESS.md  Dockerfile  ERPNextSettings.vue  GITHUB_SECRETS_SETUP.md  IMPLEMENTATION_SUMMARY.md  INSTALAR_CNPJ_CPF.md  INTEGRACAO_CNPJ_CPF.md  INTEGRACAO_ERPNEXT.md  INTEGRACAO_RAPIDA.md  LICENSE  MIGRATION-SUMMARY.md  MONGODB-CONFIGURADO.md  PORKBUN-DNS-SETUP.md  PROJECT_SUMMARY.md  PROMPT-IA-CLEAN.md  PROMPT-LANDING-PAGES.md  (+51 more)
.github/: PULL_REQUEST_TEMPLATE.md  README.md  WORKFLOWS.md  WORKFLOW_FIXES.md  copilot-instructions.md  copilot-setup-steps.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: 01-setup-azure-secret.md  02-fix-user-model.md  03-create-company-model.md  04-implement-jwt-auth.md  bug_report.md  feature_request.md
.github/workflows/: README.md  azure-deploy.yml  azure-static-web-apps-proud-mud-01808401e.yml  azure-static-web-apps-yellow-cliff-05588830f.yml  builds.yml  ci-cd.yml  ci.yml  codeql.yml  linters.yml  main.yml  on_release.yml  pr-validation.yml
.next/: trace
Avx/Avx-Core/: .gitignore  Cargo.toml
config/: consultoria-industrial.json
crm/: hooks.py  install_cnpj_cpf_integration.py
crm/api/: brasil_api.py
crm/overrides/: customer.js  supplier.js
crm/patches/: adicionar_campos_cnpj_cpf.py
docker/: docker-compose.yml  init-render.sh  init.sh
docs/: API.md  APLICABILIDADES-MODULOS.md  AVILA-BRAND-GUIDELINES.md  AVILA-BRIEF-LANDING.md  DATABASE.md  DEVELOPMENT.md  DOMAIN-CONFIGURATION.md  ENTERPRISE-TOOLS.md  EXEMPLO-PRATICO-INDUSTRIAL.md  INTEGRACAO-SEFAZ.md  MAPA-APLICABILIDADES.md  MODULO-CONSULTORIA-INDUSTRIAL.md  MODULOS-PRATICOS.md  MONGODB-SETUP.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  _sidebar.md  azure-ai-foundry-config.md  azure-ai-permissions-fix.md  changelog.md  index.html
docs/api/: endpoints.md
docs/guides/: integrations.md  onboarding.md
docs/infrastructure/: cloudflare-setup.md
frontend/arcsat-landing/: next.config.ts  package-lock.json  package.json  staticwebapp.config.json  tailwind.config.ts
frontend/arcsat-landing/app/: layout.tsx  page.tsx  page.tsx.bak
frontend/arcsat-landing/app/crm/: page.tsx
frontend/arcsat-landing/app/dashboard/: page.tsx
frontend/arcsat-landing/components/: Features.tsx  Footer.tsx  Hero.tsx  Infrastructure.tsx  Navbar.tsx  SystemsShowcase.tsx
frontend/arcsat-landing/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
frontend/arcsat-landing/lib/: utils.ts
frontend/arcsat-landing/public/: staticwebapp.config.json
frontend/arcsat-landing/src/app/: layout.tsx
scripts/: clean-test-db.js  fix-docs-domain.cjs  init-database.ts  mongo-init.js  seed-db.js  setup-domains-fixed.js  setup-domains.cjs  setup-domains.js  setup-mongodb.ts  test-domains.cjs  test-mongo-quick.ts  test-mongodb.js  test-mongodb.ts  test-sefaz.js  test-setup.js
src/: db.js  gestao-clientes-industrial.js  server-ai.js  server.js
src/config/: azure-ai.ts  database.ts  env-validator.js  env.ts  logger.ts  monitoring.js
src/middleware/: auth.js  auth.ts
src/models/: Company.ts  User.js  User.ts  company.js  company;  customDomain.js  user.js  webhook.js
src/routes/: ai.ts  auth.js  auth.ts  cnpj.js
src/services/: integrador-sefaz.js
src/types/: index.ts
src/utils/: multiTenant.js
tests/: setup.js
